Fix page jump on click

--- a/css/sirens-call.css
+++ b/css/sirens-call.css
@@ -16,7 +16,7 @@ h1 {
   font-size: 3rem;
 }
 h1:first-letter {
-  font-size: 20rem;
+  font-size: 12rem;
   font-weight: lighter !important;
   padding-right: 0.5rem;
 }
